src/objects/Transaction__c.object
<CustomObject>
    <fields>
        <fullName>AVS_Response__c</fullName>
        <label>AVS Response</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApprovalNumber__c</fullName>
        <label>Approval Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Code__c</fullName>
        <label>Approval Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Reload__c</fullName>
        <label>Auto Reload</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_RecordId__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>mysql db Id</inlineHelpText>
        <label>Card Holder Record Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CardHolder__c</fullName>
        <label>CardHolder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Card</label>
        <referenceTo>Card__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Card Holder</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Deal_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Name</label>
        <referenceTo>deals__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_Record_ID__c</fullName>
        <label>Deal Record ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GPA_Transaction_ID__c</fullName>
        <label>GPA Transaction ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ITC__c</fullName>
        <label>ITC</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRCHT__c</fullName>
        <label>MRCHT</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merchant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchant</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POS_1__c</fullName>
        <label>POS = 1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POS_Transaction_ID__c</fullName>
        <externalId>true</externalId>
        <label>POS Transaction ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <defaultValue>1</defaultValue>
        <label>PO</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Profile_ID__c</fullName>
        <label>Payment Profile ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PurchaseType__c</fullName>
        <label>PurchaseType</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Created_at__c</fullName>
        <label>Record Created at</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>mysql db field Id</inlineHelpText>
        <label>Record Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Updated_at__c</fullName>
        <label>Record Updated at</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reload_Trigger_Amount__c</fullName>
        <label>Reload Trigger Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Subcode__c</fullName>
        <label>Response Subcode</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_RecordId__c</fullName>
        <inlineHelpText>mysql db filed</inlineHelpText>
        <label>Store Record Id</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Store</label>
        <referenceTo>Store__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_ID__c</fullName>
        <inlineHelpText>mysql field id</inlineHelpText>
        <label>Transaction ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>PurchaseOrder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ca_city__c</fullName>
        <label>CA City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ca_name__c</fullName>
        <label>CA Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ca_region__c</fullName>
        <label>CA Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>card_record__c</fullName>
        <inlineHelpText>mysql db field</inlineHelpText>
        <label>Card Record Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>date1__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>funded_customer_id__c</fullName>
        <label>Funded Customer ID</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mid__c</fullName>
        <label>MID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>purchase_type__c</fullName>
        <label>Purchase Type</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>reasonCode__c</fullName>
        <label>Reason Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>responseCode__c</fullName>
        <label>Response Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>response_message__c</fullName>
        <label>Response Message</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>settlementDate__c</fullName>
        <label>Settlement Date</label>
        <type>Date</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Record_Id__c</columns>
        <columns>Contact__c</columns>
        <columns>Store__c</columns>
        <columns>Card__c</columns>
        <columns>ITC__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Purchase_Order_Transactions</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Deal_Name__c</columns>
        <columns>Approval_Code__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Transaction__c.Purchase_Orders</value>
        </filters>
        <label>Purchase Order Transactions</label>
    </listViews>
    <listViews>
        <fullName>Transaction_Data</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Store__c</columns>
        <columns>Card__c</columns>
        <columns>ITC__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Transaction__c.Transactions</value>
        </filters>
        <label>Transaction Data</label>
    </listViews>
    <nameField>
        <displayFormat>TRNS No. - {0000}</displayFormat>
        <label>Transaction</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <recordTypes>
        <fullName>Purchase_Orders</fullName>
        <active>true</active>
        <description>Where PO are available</description>
        <label>PO Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Transactions</fullName>
        <active>true</active>
        <description>For Transactions where ITC = POS / PURCHASEDEL</description>
        <label>Transactions Record Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>